<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracked_object_mapper</name>
  <version>0.0.1</version>
  <description>Maps object published to /head/tracked to map coordinates and publishes to /tracked_object_map_position</description>
  <maintainer email="horton.rscott@gmail.com">Scott Horton</maintainer>
  <license>NApache License 2.0one</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>robot_head_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
